# kraken-bot

./: .dockerignore  .gitignore  Dockerfile  README.md  STRATEGY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: publish-docker.yml  python-tests.yml
doc/: requirements-it01.md  requirements-it02.md
kraken_bot/: __init__.py  main.py  webui.py
kraken_bot/app/: config.py  container.py  demo_seed.py  runner.py
kraken_bot/domain/: enums.py  models.py  value_objects.py
kraken_bot/exchange/: base.py  kraken_adapter.py
kraken_bot/persistence/: repositories.py  schema.sql  sqlite.py
kraken_bot/reporting/: csv_export.py  pnl.py
kraken_bot/services/: market_data_service.py  market_regime_service.py  order_service.py  persistence_service.py  portfolio_service.py  reporting_service.py  status_service.py  strategy_service.py
kraken_bot/static/: dashboard.css  dashboard.js
kraken_bot/strategies/: __init__.py  base.py  ema_pullback_strategy.py  range_strategy.py  regime_strategy.py
kraken_bot/templates/: dashboard.html
kraken_bot/templates/partials/: metric_card.html  performance_panel.html
tests/unit/: test_config.py  test_demo_seed.py  test_it02_regime_and_range.py  test_kraken_adapter.py  test_market_data_service.py  test_order_service.py  test_pnl.py  test_portfolio_service.py  test_runner.py  test_strategy.py  test_webui.py
