[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kraken-bot"
version = "0.2.0"
description = "Modular Kraken spot trading bot"
requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.8,<3",
  "PyYAML>=6.0,<7",
  "httpx>=0.27,<1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
